<resources>
    <string name="app_name">My Registration App</string>


    <string name="counter_one">Счетчик 1</string>
    <string name="counter_two">Счетчик 2</string>
    <string name="counter_three">Счетчик 3</string>
    <string name="login_form">Login form</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="lost_your_login_or_password">Lost your login or password</string>
    <string name="create_account">Create Account</string>
    <string name="invalid_username_or_password">Неверный логин или пароль!!!</string>
    <string name="enter_the_data">Введите данные</string>
    <string name="succes">Success</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="registration_form">Registration form</string>
    <string name="e_mail">E-mail:</string>
    <string name="сreate_an_account">Сreate an account</string>
    <string name="send_instructions">send instructions</string>
    <string name="sendInstructions">Инструкции отправлены</string>
    <string name="password_recovery">Password Recovery</string>
    <string name="email">Введите Ваш E-mail используемый для входа. Мы вышлем письмо с инструкцией.</string>
    <string name="acc_create">Аккаунт создан</string>
    <string name="error">Error</string>


</resources>