<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.registration.RegistrationFragment">
    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/LoginScrollViewMargin">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/CardCornerRadius"
            app:cardBackgroundColor="@color/lightBlue"
            android:layout_margin="@dimen/CardMargin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/registration_form_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginFormMargin"
                    android:layout_marginBottom="@dimen/loginFormMargin"
                    android:text="@string/registration_form"
                    android:textSize="@dimen/H1" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@android:color/transparent"
                        android:drawableStart="@drawable/user_ic"
                        android:inputType="textPersonName"
                        android:hint="@string/login" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableStart="@drawable/email_ic"
                    android:hint="@string/e_mail"
                    android:background="@android:color/transparent"
                    app:passwordToggleEnabled="true"
                    android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>




                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/password_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/password_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/lock_ic"
                        android:hint="@string/password"
                        android:background="@android:color/transparent"
                        app:passwordToggleEnabled="true"
                        android:inputType="textPassword" />

                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/create_account_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/buttonLoginMargin"
                    android:layout_gravity="center"
                    android:text="@string/сreate_an_account" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>