<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.forgotPassword.PasswordRecoveryFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/LoginScrollViewMargin">


        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="@dimen/CardCornerRadius"
            app:cardBackgroundColor="@color/lightBlue"
            android:layout_margin="@dimen/CardMargin"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/password_recovery_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/loginFormMargin"
                    android:layout_marginBottom="@dimen/loginFormMargin"
                    android:text="@string/password_recovery"
                    android:textSize="@dimen/H1" />

                <TextView
                    android:id="@+id/registration_form_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/loginFormMargin"
                    android:text="@string/email"
                    android:textSize="@dimen/H2" />


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_text_input_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/email_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:drawableStart="@drawable/email_ic"
                        android:hint="@string/e_mail"
                        android:background="@android:color/transparent"
                        app:passwordToggleEnabled="true"
                        android:inputType="textEmailAddress" />
                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:id="@+id/spaseLayaut"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:orientation="horizontal" />




                <Button
                    android:id="@+id/send_instructions_account_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/buttonLoginMargin"
                    android:layout_gravity="center"
                    android:text="@string/send_instructions" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>